--- a/miniprogram/pages/student/home/index.wxss
+++ b/miniprogram/pages/student/home/index.wxss
@@ -141,8 +141,11 @@ page {
   line-height: 30rpx;
 }
 .coach-navigator .coach-right navigator {
+  width: 150rpx;
+  height: 40rpx;
   display: flex;
   align-items: center;
+  flex-direction: row;
 }
 .coach-navigator .coach-right image{
   width: 36rpx;
