[mod]完善一下boss页面

--- a/miniprogram/pages/boss/coaches_manage/index.wxss
+++ b/miniprogram/pages/boss/coaches_manage/index.wxss
@@ -13,9 +13,8 @@ page {
   position: fixed;
   top: 0;
   z-index: 2024;
-  padding: 30rpx;
-  width: 690rpx;
-  height: 40rpx;
+  width: 750rpx;
+  height: 100rpx;
   display: flex;
   align-items: center;
   background-color: #528CF4;
@@ -30,6 +29,7 @@ page {
 .search-container input{
   width: 420rpx;
   height: 30rpx;
+  margin-left: 30rpx;
   padding: 10rpx 30rpx;
   padding-right: 50rpx;
   background: rgb(223, 220, 220);
