--- a/miniprogram/pages/home/index.wxml
+++ b/miniprogram/pages/home/index.wxml
@@ -1,2 +1,3 @@
 <student-home id="studentHome" wx:if="{{ loginType === 'student'}}"></student-home>
 <coach-home id="coachHome" wx:if="{{ loginType === 'coach'}}"></coach-home>
+<boss-home id="bossHome"  wx:if="{{ loginType === 'boss'}}"></boss-home>
