--- a/miniprogram/pages/individualCenter/index.wxml
+++ b/miniprogram/pages/individualCenter/index.wxml
@@ -1,2 +1,3 @@
 <coach-user id="coachUser" wx:if="{{ loginType === 'coach' }}"></coach-user>
 <student-user id="studentUser" wx:if="{{ loginType === 'student' }}"></student-user>
+<boss-user id="bossUser" wx:if="{{ loginType === 'boss' }}"></boss-user>
