--- a/miniprogram/pages/boss/students_manage/edit/index.wxml
+++ b/miniprogram/pages/boss/students_manage/edit/index.wxml
@@ -44,23 +44,13 @@
     <view class="item">
       <text class="icon">*</text>
       <text class="label">学员性别: </text>
-      <view class="radios">
-        <custom-radio
-          name="男"
-          checked="{{ formData.gender === 'man' }}"
-          value="man"
-          data-name="gender"
-          bindchange="handleRadioChange"
-        />
-        <custom-radio
-          name="女"
-          checked="{{ formData.gender === 'women' }}"
-          value="women"
-          data-name="gender"
-          style="margin-left: 30rpx"
-          bindchange="handleRadioChange"
-        />
-      </view>
+      <picker
+        mode="selector"
+        data-name="gender"
+        range="{{genders}}"
+        bindchange="onPickerChange">
+        <view class="picker">{{ formData.gender }}</view>
+      </picker>
     </view>
     <view class="item">
       <text class="icon">*</text>
@@ -114,107 +104,17 @@
         />
       </view>
     </view>
-    <view class="item" style="align-items: start">
+    <view class="item">
       <text class="icon">*</text>
       <text class="label">报考类型: </text>
-      <view class="radios">
-        <custom-radio
-          class="custom-radio-item"
-          data-name="carType"
-          name="C1"
-          checked="{{ formData.carType === 'C1' }}"
-          value="C1"
-          bindchange="handleRadioChange"
-        />
-        <custom-radio
-          class="custom-radio-item"
-          data-name="carType"
-          name="C2"
-          checked="{{ formData.carType === 'C2' }}"
-          value="C2"
-          style="margin-left: 30rpx"
-          bindchange="handleRadioChange"
-        />
-        <custom-radio
-          class="custom-radio-item"
-          data-name="carType"
-          name="C5"
-          checked="{{ formData.carType === 'C5' }}"
-          value="C5"
-          style="margin-left: 30rpx"
-          bindchange="handleRadioChange"
-        />
-        <custom-radio
-          class="custom-radio-item"
-          data-name="carType"
-          name="C6"
-          checked="{{ formData.carType === 'C6' }}"
-          value="C6"
-          style="margin-left: 30rpx"
-          bindchange="handleRadioChange"
-        />
-        <custom-radio
-          class="custom-radio-item"
-          data-name="carType"
-          name="A1"
-          checked="{{ formData.carType === 'A1' }}"
-          value="A1"
-          bindchange="handleRadioChange"
-        />
-        <custom-radio
-          class="custom-radio-item"
-          data-name="carType"
-          name="A2"
-          checked="{{ formData.carType === 'A2' }}"
-          value="A2"
-          style="margin-left: 30rpx"
-          bindchange="handleRadioChange"
-        />
-        <custom-radio
-          class="custom-radio-item"
-          data-name="carType"
-          name="A3"
-          checked="{{ formData.carType === 'A3' }}"
-          value="A3"
-          style="margin-left: 30rpx"
-          bindchange="handleRadioChange"
-        />
-        <custom-radio
-          class="custom-radio-item"
-          data-name="carType"
-          name="B1"
-          checked="{{ formData.carType === 'B1' }}"
-          value="B1"
-          style="margin-left: 30rpx"
-          bindchange="handleRadioChange"
-        />
-        <custom-radio
-          class="custom-radio-item"
-          data-name="carType"
-          name="B2"
-          checked="{{ formData.carType === 'B2' }}"
-          value="B2"
-          bindchange="handleRadioChange"
-        />
-        <custom-radio
-          class="custom-radio-item"
-          data-name="carType"
-          name="D"
-          checked="{{ formData.carType === 'D' }}"
-          value="D"
-          style="margin-left: 30rpx"
-          bindchange="handleRadioChange"
-        />
-        <custom-radio
-          class="custom-radio-item"
-          data-name="carType"
-          name="E"
-          checked="{{ formData.carType === 'E' }}"
-          value="E"
-          style="margin-left: 30rpx"
-          bindchange="handleRadioChange"
-        />
-      </view>
+      <picker
+        class="picker"
+        mode="selector"
+        range="{{carTypes}}"
+        data-name="carType"
+        bindchange="onPickerChange">
+        <view class="picker">{{ formData.carType }}</view>
+      </picker>
     </view>
   </view>
 </view>
