--- a/miniprogram/pages/boss/students_manage/edit/index.wxss
+++ b/miniprogram/pages/boss/students_manage/edit/index.wxss
@@ -88,7 +88,8 @@ page {
   flex-wrap: wrap;
 }
 .picker{
-  padding: 14rpx;
+  padding: 10rpx;
+  margin-left: 10rpx;
   background-color: #FFFFFF;
   font-size: 30rpx;
   color: rgb(45, 44, 44);
