--- a/miniprogram/pages/personalInformation/index.wxml
+++ b/miniprogram/pages/personalInformation/index.wxml
@@ -1,144 +1,71 @@
-<block wx:if="{{ loginType === 'coach'}}">
-  <view class="base-info">
-    <view class="title">
-      <view class="icon" ></view>
-      <text>基本信息</text>
+<view class="base-info">
+  <view class="title">
+    <view class="icon" ></view>
+    <text>基本信息</text>
+  </view>
+  <view class="form">
+    <view class="item">
+      <text class="icon">*</text>
+      <text class="label">账号名: </text>
+      <input
+        value="{{formData.name}}"
+        data-name="name"
+        bindinput="fieldChange"
+        base-input="true"
+        placeholder-class="placeholder"
+        placeholder="请输入账号名(必填)" />
     </view>
-    <view class="form">
-      <view class="item">
-        <text class="icon">*</text>
-        <text class="label">教练姓名: </text>
-        <input
-          value="{{formData.name}}"
-          data-name="name"
-          bindinput="inputChange"
-          base-input="true"
-          placeholder-class="placeholder"
-          placeholder="请输入姓名(必填)" />
-      </view>
-      <view class="item">
-        <text class="icon">*</text>
-        <text class="label">身份证号: </text>
-        <input
-          class="disabled"
-          value="{{formData.idCard}}"
-          data-name="idCard"
-          disabled="{{true}}"
-          type="idcard"
-          bindinput="inputChange"
-          base-input="true"
-          placeholder-class="placeholder"
-          placeholder="请输入身份证号" />
-      </view>
-      <view class="item">
-        <text class="icon">*</text>
-        <text class="label">出生年月: </text>
-        <picker
-          mode="date"
-          value="{{formData.birthday}}"
-          data-name="birthday"
-          start="1900-09-01"
-          end="2999-09-01"
-          bindchange="bindDateChange">
-          <view class="picker">{{ formData.birthday }}</view>
-        </picker>
-      </view>
-      <view class="item">
-        <text class="icon">*</text>
-        <text class="label">教练性别: </text>
-        <picker
-          mode="selector"
-          data-name="gender"
-          range="{{genders}}"
-          bindchange="handleRadioChange">
-          <view class="picker">{{ formData.gender }}</view>
-        </picker>
-      </view>
-      <view class="item">
-        <text class="icon">*</text>
-        <text class="label">手机号码: </text>
-        <input
-          value="{{formData.phone}}"
-          data-name="phone"
-          type="number"
-          bindinput="inputChange"
-          base-input="true"
-          placeholder-class="placeholder"
-          placeholder="请输入手机号码" />
+    <view class="item">
+      <text class="icon">*</text>
+      <text class="label">身份证号: </text>
+      <input
+        class="disabled"
+        value="{{formData.idCard}}"
+        data-name="idCard"
+        disabled="{{true}}"
+        type="idcard"
+        bindinput="fieldChange"
+        base-input="true"
+        placeholder-class="placeholder"
+        placeholder="请输入身份证号" />
+    </view>
+    <view class="item">
+      <text class="icon">*</text>
+      <text class="label">出生年月: </text>
+      <picker
+        mode="date"
+        value="{{formData.birthday}}"
+        data-name="birthday"
+        start="1900-09-01"
+        end="2999-09-01"
+        bindchange="fieldChange">
+        <view class="picker">{{ formData.birthday }}</view>
+      </picker>
+    </view>
+    <view class="item">
+      <text class="icon">*</text>
+      <text class="label">手机号码: </text>
+      <input
+        value="{{formData.phone}}"
+        data-name="phone"
+        type="number"
+        bindinput="fieldChange"
+        base-input="true"
+        placeholder-class="placeholder"
+        placeholder="请输入手机号码" />
+    </view>
+    <view class="item" style="align-items: self-start;">
+      <text class="icon"></text>
+      <text class="label">个人头像: </text>
+      <view class="upload-image">
+        <image wx:if="{{ formData.avatar }}" class="image" src="{{ formData.avatar }}" mode="aspectFill" bindtap="uploadImage"></image>
+        <view wx:else class="upload-image-mask" bindtap="uploadImage">
+          <text class="iconfont icon-upload">选择图片</text>
+        </view>
       </view>
     </view>
   </view>
-</block>
-<block wx:else>
-  <view class="base-info">
-    <view class="title">
-      <view class="icon" ></view>
-      <text>基本信息</text>
-    </view>
-    <view class="form">
-      <view class="item">
-        <text class="icon">*</text>
-        <text class="label">学员姓名: </text>
-        <input
-          value="{{formData.name}}"
-          data-name="name"
-          bindinput="inputChange"
-          base-input="true"
-          placeholder-class="placeholder"
-          placeholder="请输入姓名(必填)" />
-      </view>
-      <view class="item">
-        <text class="icon">*</text>
-        <text class="label">身份证号: </text>
-        <input
-          class="disabled"
-          value="{{formData.idCard}}"
-          data-name="idCard"
-          type="idcard"
-          bindinput="inputChange"
-          base-input="true"
-          placeholder-class="placeholder"
-          placeholder="请输入身份证号" />
-      </view>
-      <view class="item">
-        <text class="icon">*</text>
-        <text class="label">出生年月: </text>
-        <picker
-          mode="date"
-          value="{{formData.birthday}}"
-          data-name="birthday"
-          start="1900-09-01"
-          end="2999-09-01"
-          bindchange="bindDateChange">
-          <view class="picker">{{ formData.birthday }}</view>
-        </picker>
-      </view>
-      <view class="item">
-        <text class="icon">*</text>
-        <text class="label">学员性别: </text>
-        <picker
-          mode="selector"
-          data-name="gender"
-          range="{{genders}}"
-          bindchange="handleRadioChange">
-          <view class="picker">{{ formData.gender }}</view>
-        </picker>
-      </view>
-      <view class="item">
-        <text class="icon">*</text>
-        <text class="label">手机号码: </text>
-        <input
-          value="{{formData.phone}}"
-          data-name="phone"
-          type="number"
-          bindinput="inputChange"
-          base-input="true"
-          placeholder-class="placeholder"
-          placeholder="请输入手机号码" />
-      </view>
-    </view>
-  </view>
-</block>
+</view>
 <view class="bottom-btn" bindtap="handleButtonClick">
   <text>立即提交</text>
 </view>
