--- a/miniprogram/pages/home/index.wxml
+++ b/miniprogram/pages/home/index.wxml
@@ -1,3 +1,3 @@
-<student-home id="studentHome" wx:if="{{ loginType === 'student'}}"></student-home>
-<coach-home id="coachHome" wx:if="{{ loginType === 'coach'}}"></coach-home>
-<boss-home id="bossHome"  wx:if="{{ loginType === 'boss'}}"></boss-home>
+<student-home id="studentHome" wx:if="{{ registerType === 'student'}}"></student-home>
+<coach-home id="coachHome" wx:if="{{ registerType === 'coach'}}"></coach-home>
+<boss-home id="bossHome"  wx:if="{{ registerType === 'boss'}}"></boss-home>
