--- a/miniprogram/pages/student/coachList/index.wxss
+++ b/miniprogram/pages/student/coachList/index.wxss
@@ -18,7 +18,7 @@ page {
   height: 40rpx;
   display: flex;
   align-items: center;
-  background-color: #528CF4;
+  background-color: #feb47b;
 }
 .search-container image{
   position: absolute;
