--- a/miniprogram/pages/boss/coaches_manage/edit/index.wxml
+++ b/miniprogram/pages/boss/coaches_manage/edit/index.wxml
@@ -1,4 +1,3 @@
-
 <view class="base-info">
   <view class="title">
     <view class="icon" ></view>
@@ -7,14 +6,25 @@
   <view class="form">
     <view class="item">
       <text class="icon">*</text>
-      <text class="label">教练姓名: </text>
+      <text class="label">账号名: </text>
       <input
         value="{{formData.name}}"
         data-name="name"
-        bindinput="inputChange"
+        bindinput="fieldChange"
         base-input="true"
         placeholder-class="placeholder"
-        placeholder="请输入姓名(必填)" />
+        placeholder="请输入账号名(必填)" />
+    </view>
+    <view class="item">
+      <text class="icon">*</text>
+      <text class="label">账号密码: </text>
+      <input
+        value="{{formData.password}}"
+        data-name="password"
+        bindinput="fieldChange"
+        base-input="true"
+        placeholder-class="placeholder"
+        placeholder="请输入密码" />
     </view>
     <view class="item">
       <text class="icon">*</text>
@@ -23,10 +33,35 @@
         value="{{formData.idCard}}"
         data-name="idCard"
         type="idcard"
-        bindinput="inputChange"
+        bindinput="fieldChange"
         base-input="true"
         placeholder-class="placeholder"
         placeholder="请输入身份证号" />
+    </view>
+    <view class="item">
+      <text class="icon">*</text>
+      <text class="label">手机号码: </text>
+      <input
+        value="{{formData.phone}}"
+        data-name="phone"
+        type="number"
+        bindinput="fieldChange"
+        base-input="true"
+        placeholder-class="placeholder"
+        placeholder="请输入手机号码" />
+    </view>
+    <view class="item">
+      <text class="icon">*</text>
+      <text class="label">性别: </text>
+      <picker
+        mode="selector"
+        data-name="gender"
+        data-range="genders"
+        range-key="label"
+        range="{{genders}}"
+        bindchange="pickerChange">
+        <view class="picker">{{ formData.genderLabel }}</view>
+      </picker>
     </view>
     <view class="item">
       <text class="icon">*</text>
@@ -37,32 +72,38 @@
         data-name="birthday"
         start="1900-09-01"
         end="2999-09-01"
-        bindchange="bindDateChange">
+        bindchange="fieldChange">
         <view class="picker">{{ formData.birthday }}</view>
       </picker>
     </view>
+    
     <view class="item">
       <text class="icon">*</text>
-      <text class="label">教练性别: </text>
+      <text class="label">注册类型: </text>
       <picker
         mode="selector"
-        data-name="gender"
-        range="{{genders}}"
-        bindchange="onPickerChange">
-        <view class="picker">{{ formData.gender }}</view>
+        data-name="registerType"
+        data-range="registerTypes"
+        range-key="label"
+        range="{{registerTypes}}"
+        bindchange="pickerChange">
+        <view class="picker">{{ formData.registerTypeLabel }}</view>
       </picker>
     </view>
-    <view class="item">
-      <text class="icon">*</text>
-      <text class="label">手机号码: </text>
-      <input
-        value="{{formData.phone}}"
-        data-name="phone"
-        type="number"
-        bindinput="inputChange"
-        base-input="true"
-        placeholder-class="placeholder"
-        placeholder="请输入手机号码" />
+    <view class="item" style="align-items: self-start;">
+      <text class="icon"></text>
+      <text class="label">个人头像: </text>
+      <view class="upload-image">
+        <image
+          wx:if="{{ formData.avatar }}"
+          class="image"
+          src="{{ formData.avatar }}"
+          mode="aspectFill"
+          bindtap="uploadImage"></image>
+        <view wx:else class="upload-image-mask" bindtap="uploadImage">
+          <text class="iconfont icon-upload">选择图片</text>
+        </view>
+      </view>
     </view>
   </view>
 </view>
@@ -76,16 +117,28 @@
       <text class="icon">*</text>
       <text class="label">所属驾校: </text>
       <input
-        value="{{formData.school}}"
-        data-name="school"
-        bindinput="inputChange"
+        value="{{ formData.schoolName }}"
+        data-name="schoolName"
+        bindinput="fieldChange"
         base-input="true"
         placeholder-class="placeholder"
         placeholder="请输入所属驾校(必填)" />
     </view>
-    <view class="item" style="align-items: start">
+    <view class="item" wx:if="{{formData.registerType === 'coach'}}">
       <text class="icon">*</text>
       <text class="label">教学类型: </text>
+      <picker
+        class="picker"
+        mode="selector"
+        range="{{carTypes}}"
+        data-name="carType"
+        bindchange="onPickerChange">
+        <view class="picker">{{ formData.carType }}</view>
+      </picker>
+    </view>
+    <view class="item" wx:if="{{formData.registerType === 'student'}}">
+      <text class="icon">*</text>
+      <text class="label">报考类型: </text>
       <picker
         class="picker"
         mode="selector"
