--- a/miniprogram/pages/student/home/index.wxml
+++ b/miniprogram/pages/student/home/index.wxml
@@ -20,7 +20,7 @@
     </view>
     <view class="notice-righ clearfix" url="" open-type="navigate">
       <swiper autoplay="true" circular="true" class="swiper_container" interval="7000" vertical="true">
-        <swiper-item wx:for="{{noticeArr}}" wx:key="id" data-item="{{item}}" bindtap="handleNotice">
+        <swiper-item wx:for="{{announcementList}}" wx:key="id" data-item="{{item}}" bindtap="handleNotice">
           <view class="swiper_item">{{item.title}}</view>
         </swiper-item>
       </swiper>
