--- a/miniprogram/pages/student/orderClass/index.wxml
+++ b/miniprogram/pages/student/orderClass/index.wxml
@@ -1,7 +1,7 @@
 <view class="order-container">
   <view class="coach-info">
     <view class="base-info">
-      <image src="{{ coachInfo.avatarUrl || images.icons.defaultAvatar }}" />
+      <image src="{{coachInfo.avatar || coachInfo.avatarUrl || images.icons.defaultAvatar }}" />
       <view class="text-info">
         <view class="name">
           <text>{{coachInfo.name || '未指定'}}</text>
@@ -31,6 +31,7 @@
     <view class="selectDate-options">
       <view
         class="option {{item.selected ? 'active ' : ''}}"
+        style="{{ (index === 0 || index === 5) ? 'margin-left: 0;' : 'margin-left: 6rpx' }}"
         wx:for="{{dateOptions}}"
         wx:key="formattedDate"
         data-date="{{item}}"
@@ -45,6 +46,7 @@
         wx:for="{{timePeriods}}"
         wx:key="period"
         class="timePeriod {{ item.selected ? 'active' : ''}}"
+        style="{{ index % 3 === 0 ? 'margin-left: 0;' : 'margin-left: 12rpx' }}"
         data-period="{{item.period}}"
         bindtap="onPeriodSelect">
         <text>{{item.name}}</text>
@@ -53,6 +55,18 @@
         <text>{{item.period}}</text>
         <image wx:if="{{item.selected}}" src="{{ images.icons.checked }}" />
       </view>
+    </view>
+    <view class="train-container">
+      <text class="icon">*</text>
+      <text class="label">训练类型: </text>
+      <picker
+        class="picker"
+        mode="selector"
+        range-key="label"
+        range="{{trainTypes}}"
+        bindchange="onPickerChange">
+        <view class="picker">{{ trainTypeLabel }}</view>
+      </picker>
     </view>
   </view>
   <view class="pay-container">
@@ -69,8 +83,8 @@
     <view class="btn cancel" bindtap="handleCancel">
       <text>返回</text>
     </view>
-    <view class="btn" bindtap="handleButtonClick">
+    <button class="btn" form-type="submit" bindtap="handleButtonClick">
       <text>提交</text>
-    </view>
+    </button>
   </view>
 </view>
