--- a/miniprogram/pages/personalInformation/index.wxml
+++ b/miniprogram/pages/personalInformation/index.wxml
@@ -54,6 +54,18 @@
         placeholder-class="placeholder"
         placeholder="请输入手机号码" />
     </view>
+    <view class="item">
+      <text class="icon">*</text>
+      <text class="lawwbel"> 个人描述: </text>
+      <textarea
+        placeholder="请输入个人描述"
+        auto-height
+        data-name="description"
+        maxlength="400"
+        bindinput="fieldChange"
+        value="{{formData.description}}"
+      ></textarea>
+    </view>
     <view class="item" style="align-items: self-start;">
       <text class="icon"></text>
       <text class="label">个人头像: </text>
