--- a/miniprogram/pages/registerPage/index.wxml
+++ b/miniprogram/pages/registerPage/index.wxml
@@ -52,6 +52,18 @@
     </view>
     <view class="item">
       <text class="icon">*</text>
+      <text class="label"> 个人描述: </text>
+      <textarea
+        placeholder="请输入个人描述"
+        auto-height
+        data-name="description"
+        maxlength="400"
+        bindinput="fieldChange"
+        value="{{formData.description}}"
+      ></textarea>
+    </view>
+    <view class="item">
+      <text class="icon">*</text>
       <text class="label">性别: </text>
       <picker
         mode="selector"
@@ -113,16 +125,17 @@
     <text>驾校信息</text>
   </view>
   <view class="form">
-    <view class="item">
+    <view class="item" wx:if="{{formData.registerType === 'coach'}}">
       <text class="icon">*</text>
-      <text class="label">所属驾校: </text>
-      <input
-        value="{{ formData.schoolName }}"
+      <text class="label">所属训练场: </text>
+      <picker
+        mode="selector"
         data-name="schoolName"
-        bindinput="fieldChange"
-        base-input="true"
-        placeholder-class="placeholder"
-        placeholder="请输入所属驾校(必填)" />
+        data-range="schools"
+        range="{{schools}}"
+        bindchange="pickerChange">
+        <view class="picker">{{ formData.schoolName }}</view>
+      </picker>
     </view>
     <view class="item" wx:if="{{formData.registerType === 'coach'}}">
       <text class="icon">*</text>
