--- a/miniprogram/pages/evaluationPage/index.wxml
+++ b/miniprogram/pages/evaluationPage/index.wxml
@@ -8,18 +8,6 @@
     placeholder="搜索姓名"
     bindconfirm="onConfirm"
     bindinput="onInput" />
-  <view class="add-btn"> 
-    <picker
-      class="picker"
-      mode="date"
-      value="{{searchForm.orderTime}}"
-      data-name="orderTime"
-      start="1900-09-01"
-      end="2999-09-01"
-      bindchange="bindDateChange">
-      <view class="picker">{{ searchForm.orderTime }}</view>
-    </picker>
-  </view>
 </view>
 <scroll-view
   scroll-y
@@ -28,35 +16,56 @@
   refresher-enabled="{{true}}"
   refresher-triggered="{{isRefreshing}}"
 >
-  <block wx:for="{{orderList}}" wx:key="id">
+  <block wx:for="{{orderList}}" wx:key="id" wx:for-index="orderIndex">
     <view class="list-item">
-      <image
-        wx:if="{{ userInfo.registerType === 'student' }}"
-        src="{{ item.coachInfo.avatar || item.coachInfo.avatarUrl || images.icons.defaultAvatar }}" />
-      <image
-        wx:else
-        src="{{ item.studentInfo.avatar || item.studentInfo.avatarUrl || images.icons.defaultAvatar }}" />
-      <view class="info">
-        <text wx:if="{{ userInfo.registerType === 'student' }}">{{(item.coachInfo.name || '未指定') + '   ' + (item.coachInfo.phone || '') }}</text>
-        <text wx:else>{{item.studentInfo.name + '   ' +item.studentInfo.phone }}</text>
-        <text class="marginTop">{{item.orderTime + ' ' + item.orderTimePeriod}}</text>
-        <text class="marginTop">预约科目：{{item.trainTypeLabel}}</text>
-        <view class="marginTop">
-          <text style="font-size:24rpx;" class="prices">￥ </text>
-          <text class="prices">{{item.prices}}</text>
+      <view class="order-info">
+        <image src="{{ item.coachInfo.avatar || item.coachInfo.avatarUrl || images.icons.defaultAvatar }}" />
+        <view class="info">
+          <text>{{ (item.coachInfo.name || '未指定') + '   ' + (item.coachInfo.phone || '') }}</text>
+          <text class="marginTop">{{ item.orderTime + ' ' + item.orderTimePeriod }}</text>
+          <text class="marginTop">预约科目：{{ item.trainTypeLabel }}</text>
+          <view class="marginTop">
+            <text style="font-size:24rpx;" class="prices">￥ </text>
+            <text class="prices">{{ item.prices }}</text>
+          </view>
+        </view>
+        <view class="options btn-area" wx:if="{{ !item.evaluationInfo }}">
+          <view
+            class="evaluation"
+            type="warn"
+            data-index="{{ orderIndex }}"
+            bindtap="onEvaluate"
+          >立即评价</view>
         </view>
       </view>
-      <view class="options btn-area">
-        <view wx:if="{{ item.status === 'created' }}" class="created" type="primary">等待接单</view>
-        <view wx:if="{{ item.status === 'running' }}" class="running" type="primary">等待服务</view>
-        <view wx:if="{{ item.status === 'complete' }}" class="complete" type="warn">订单完成</view>
-        <view
-          wx:if="{{ item.status === 'created'}}"
-          class="delete"
-          type="warn"
-          data-id="{{item._id}}"
-          bindtap="onDelete"
-        >取消订单</view>
+      <view class="evaluation-container" wx:if="{{ item.evaluationInfo }}">
+        <view class="evaluation-item">
+          <text class="label">总体评价：</text>
+          <block wx:for="{{[1, 2, 3, 4, 5]}}" wx:key="starIndex" wx:for-index="starIndex">
+            <view class="star" data-field="totalRating" data-star-index="{{starIndex}}" data-order-index="{{orderIndex}}" bindtap="rate">
+              {{0 < item.evaluationInfo.totalRating ? '★' : '☆'}}
+            </view>
+          </block>
+        </view>
+        <view class="evaluation-item">
+          <text class="label">场地评价：</text>
+          <block wx:for="{{[1, 2, 3, 4, 5]}}" wx:key="starIndex" wx:for-index="starIndex">
+            <view class="star" data-field="venueRating" data-star-index="{{starIndex}}" data-order-index="{{orderIndex}}" bindtap="rate">
+              {{0 < item.evaluationInfo.venueRating ? '★' : '☆'}}
+            </view>
+          </block>
+        </view>
+        <view class="evaluation-item">
+          <text class="label">教练评价：</text>
+          <block wx:for="{{[1, 2, 3, 4, 5]}}" wx:key="starIndex" wx:for-index="starIndex">
+            <view class="star" data-field="coachRating" data-star-index="{{starIndex}}" data-order-index="{{orderIndex}}" bindtap="rate">
+              {{0 < item.evaluationInfo.coachRating ? '★' : '☆'}}
+            </view>
+          </block>
+        </view>
+        <view class="evaluation-item flex-end">
+          <view class="evaluation-btn" data-info="{{ item }}" bindtap="evaluteSubmit">立即提交</view>
+        </view>
       </view>
     </view>
   </block>
